--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,7 @@
-nav {
-  background-color: #1D267D;
+.section {
+  scroll-snap-align: center;
+}
+
+.container {
+  scroll-snap-type: y mandatory;
 }
